header-fix on small width

--- a/src/sass/_header-navigation.scss
+++ b/src/sass/_header-navigation.scss
@@ -12,6 +12,9 @@
     flex-wrap: wrap;
     max-width: 200px;
   }
+  @media screen and (max-width: 560px) and (orientation: landscape) {
+    margin-left: 130px;
+  }
 }
 .header-link {
   @media screen and (min-width: $tablet), (orientation: landscape) {
@@ -125,7 +128,6 @@
 
 .header-join-div {
   margin-left: 40px;
-
   @media screen and (min-width: $tablet), (orientation: landscape) {
     position: absolute;
     top: 0;
@@ -134,6 +136,9 @@
     width: 159px;
     height: 680px;
     background-color: $main_white;
+  }
+  @media screen and (max-width: 560px) and (orientation: landscape) {
+    left: -300px;
   }
 }
 .header-join-list {
@@ -237,6 +242,9 @@
   @media screen and (max-width: $tablet) and (orientation: landscape) {
     padding-left: 200px;
   }
+  @media screen and (max-width: 560px) and (orientation: landscape) {
+    padding-left: 30px;
+  }
   margin: 0;
   padding-top: 208px;
   padding-left: 31px;
@@ -270,6 +278,9 @@
   @media screen and (max-width: $tablet) and (orientation: landscape) {
     padding-left: 200px;
   }
+  @media screen and (max-width: 560px) and (orientation: landscape) {
+    padding-left: 30px;
+  }
   font-family: $Raleway;
   font-style: normal;
   font-weight: bold;
@@ -298,6 +309,10 @@
 
   @media screen and (max-width: $tablet) and (orientation: landscape) {
     margin-left: 200px;
+  }
+
+  @media screen and (max-width: 560px) and (orientation: landscape) {
+    margin-left: 30px;
   }
   font-weight: normal;
   font-size: 16px;
